# datedrop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/requirements/: opensource-release.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DateControls.tsx  DropZone.tsx  FileTable.tsx  TitleBar.tsx
src/components/ui/: table.tsx
