[package]
name = "datedrop"
version = "0.1.0"
description = "Datedrop – EXIF-Datum & Dateidatum von Fotos setzen"
authors = ["Numb006"]
edition = "2021"

[lib]
name = "datedrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5"
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
open = "5"
